--- a/index.html
+++ b/index.html
@@ -1828,162 +1828,85 @@
                         <button class="filter-btn" data-filter="design" data-en="UI/UX Design" data-es="Diseño UI/UX">Diseño UI/UX</button>
                     </div>
 
-                    <div class="portfolio-grid" id="portfolio-grid">
+                   <div class="portfolio-grid" id="portfolio-grid">
                         <div class="portfolio-item" data-category="web" data-aos="fade-up" data-aos-delay="100">
                             <div class="portfolio-image">
-                                <i class="fas fa-laptop-code" aria-hidden="true"></i>
+                                <i class="fas fa-traffic-light" aria-hidden="true"></i>
                                 <div class="portfolio-overlay">
-                                    <a href="#" class="btn btn-primary btn-sm" aria-label="View project">
-                                        <i class="fas fa-eye" aria-hidden="true"></i>
+                                    <a href="https://github.com/GeraldDM21/ProyectoUI" target="_blank" class="btn btn-primary btn-sm" aria-label="View project on GitHub">
+                                        <i class="fas fa-external-link-alt" aria-hidden="true"></i>
                                     </a>
-                                    <a href="#" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
+                                    <a href="https://github.com/GeraldDM21/ProyectoUI" target="_blank" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="portfolio-content">
-                                <h3 data-en="Analytics Dashboard" data-es="Dashboard de Análisis">Dashboard de Análisis</h3>
-                                <p data-en="Real-time data visualization dashboard with interactive charts" data-es="Dashboard de visualización de datos en tiempo real con gráficos interactivos">
-                                    Dashboard de visualización de datos en tiempo real con gráficos interactivos.
+                                <h3 data-en="Traffic Ticket Management System" data-es="Sistema de Gestión de Multas de Tráfico">Sistema de Gestión de Multas de Tráfico</h3>
+                                <p data-en="Complete web system for managing traffic tickets with user interface and administration" data-es="Sistema web completo para gestión de multas de tráfico con interfaz de usuario y administración">
+                                    Sistema web completo para gestión de multas de tráfico con interfaz de usuario y administración.
                                 </p>
                                 <div class="tech-tags">
-                                    <span class="tech-tag">Vue.js</span>
-                                    <span class="tech-tag">D3.js</span>
-                                    <span class="tech-tag">Python</span>
-                                    <span class="tech-tag">PostgreSQL</span>
+                                    <span class="tech-tag">HTML5</span>
+                                    <span class="tech-tag">CSS3</span>
+                                    <span class="tech-tag">JavaScript</span>
+                                    <span class="tech-tag">UI/UX</span>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="portfolio-item" data-category="mobile" data-aos="fade-up" data-aos-delay="200">
+                        <div class="portfolio-item" data-category="web" data-aos="fade-up" data-aos-delay="200">
                             <div class="portfolio-image">
-                                <i class="fas fa-mobile-alt" aria-hidden="true"></i>
+                                <i class="fas fa-fist-raised" aria-hidden="true"></i>
                                 <div class="portfolio-overlay">
-                                    <a href="#" class="btn btn-primary btn-sm" aria-label="View project">
-                                        <i class="fas fa-eye" aria-hidden="true"></i>
+                                    <a href="https://github.com/EmanuelMenaCENFOTEC/Proyecto-Uno-TechMinds" target="_blank" class="btn btn-primary btn-sm" aria-label="View project on GitHub">
+                                        <i class="fas fa-external-link-alt" aria-hidden="true"></i>
                                     </a>
-                                    <a href="#" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
+                                    <a href="https://github.com/EmanuelMenaCENFOTEC/Proyecto-Uno-TechMinds" target="_blank" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="portfolio-content">
-                                <h3 data-en="Task Management App" data-es="App de Gestión de Tareas">App de Gestión de Tareas</h3>
-                                <p data-en="Cross-platform mobile app for productivity and task management" data-es="App móvil multiplataforma para productividad y gestión de tareas">
-                                    App móvil multiplataforma para productividad y gestión de tareas
+                                <h3 data-en="Pokemon Battles Game" data-es="Juego de Batallas Pokemon">Juego de Batallas Pokemon</h3>
+                                <p data-en="Interactive Pokemon battle game with team collaboration development" data-es="Juego interactivo de batallas Pokemon desarrollado en colaboración con equipo">
+                                    Juego interactivo de batallas Pokemon desarrollado en colaboración con equipo.
                                 </p>
                                 <div class="tech-tags">
-                                    <span class="tech-tag">React Native</span>
-                                    <span class="tech-tag">Firebase</span>
-                                    <span class="tech-tag">Redux</span>
+                                    <span class="tech-tag">JavaScript</span>
+                                    <span class="tech-tag">HTML5</span>
+                                    <span class="tech-tag">CSS3</span>
+                                    <span class="tech-tag">Game Dev</span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="portfolio-item" data-category="web" data-aos="fade-up" data-aos-delay="300">
                             <div class="portfolio-image">
-                                <i class="fas fa-shopping-cart" aria-hidden="true"></i>
+                                <i class="fas fa-car" aria-hidden="true"></i>
                                 <div class="portfolio-overlay">
-                                    <a href="#" class="btn btn-primary btn-sm" aria-label="View project">
-                                        <i class="fas fa-eye" aria-hidden="true"></i>
+                                    <a href="https://github.com/gustavocenfotec/PrograBaseT1" target="_blank" class="btn btn-primary btn-sm" aria-label="View project on GitHub">
+                                        <i class="fas fa-external-link-alt" aria-hidden="true"></i>
                                     </a>
-                                    <a href="#" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
+                                    <a href="https://github.com/gustavocenfotec/PrograBaseT1" target="_blank" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="portfolio-content">
-                                <h3 data-en="E-commerce Platform" data-es="Plataforma E-commerce">Plataforma E-commerce</h3>
-                                <p data-en="Complete online store with payment integration and admin panel" data-es="Tienda online completa con integración de pagos y panel de administración">
-                                    Tienda online completa con integración de pagos y panel de administración
+                                <h3 data-en="Car Sales System" data-es="Sistema de Venta de Carros">Sistema de Venta de Carros</h3>
+                                <p data-en="Complete car dealership management system with inventory and sales tracking" data-es="Sistema completo de gestión de concesionario con inventario y seguimiento de ventas">
+                                    Sistema completo de gestión de concesionario con inventario y seguimiento de ventas.
                                 </p>
                                 <div class="tech-tags">
-                                    <span class="tech-tag">React</span>
-                                    <span class="tech-tag">Node.js</span>
-                                    <span class="tech-tag">MongoDB</span>
-                                    <span class="tech-tag">Stripe</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="portfolio-item" data-category="design" data-aos="fade-up" data-aos-delay="400">
-                            <div class="portfolio-image">
-                                <i class="fas fa-palette" aria-hidden="true"></i>
-                                <div class="portfolio-overlay">
-                                    <a href="#" class="btn btn-primary btn-sm" aria-label="View project">
-                                        <i class="fas fa-eye" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-secondary btn-sm" aria-label="View design on Figma">
-                                        <i class="fab fa-figma" aria-hidden="true"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-content">
-                                <h3 data-en="Restaurant App Design" data-es="Diseño App Restaurante">Diseño App Restaurante</h3>
-                                <p data-en="Complete UI/UX design for a restaurant ordering mobile application" data-es="Diseño UI/UX completo para una aplicación móvil de pedidos de restaurante">
-                                    Diseño UI/UX completo para una aplicación móvil de pedidos de restaurante
-                                </p>
-                                <div class="tech-tags">
-                                    <span class="tech-tag">Figma</span>
-                                    <span class="tech-tag">Photoshop</span>
-                                    <span class="tech-tag">Illustrator</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="portfolio-item" data-category="web" data-aos="fade-up" data-aos-delay="500">
-                            <div class="portfolio-image">
-                                <i class="fas fa-graduation-cap" aria-hidden="true"></i>
-                                <div class="portfolio-overlay">
-                                    <a href="#" class="btn btn-primary btn-sm" aria-label="View project">
-                                        <i class="fas fa-eye" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-content">
-                                <h3 data-en="Learning Management System" data-es="Sistema de Gestión de Aprendizaje">Sistema de Gestión de Aprendizaje</h3>
-                                <p data-en="Online education platform with course management and video streaming" data-es="Plataforma de educación online con gestión de cursos y streaming de video">
-                                    Plataforma de educación online con gestión de cursos y streaming de video
-                                </p>
-                                <div class="tech-tags">
-                                    <span class="tech-tag">Angular</span>
-                                    <span class="tech-tag">Laravel</span>
-                                    <span class="tech-tag">MySQL</span>
-                                    <span class="tech-tag">AWS</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="portfolio-item" data-category="mobile" data-aos="fade-up" data-aos-delay="600">
-                            <div class="portfolio-image">
-                                <i class="fas fa-heartbeat" aria-hidden="true"></i>
-                                <div class="portfolio-overlay">
-                                    <a href="#" class="btn btn-primary btn-sm" aria-label="View project">
-                                        <i class="fas fa-eye" aria-hidden="true"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-secondary btn-sm" aria-label="View code on GitHub">
-                                        <i class="fab fa-github" aria-hidden="true"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-content">
-                                <h3 data-en="Health Tracking App" data-es="App de Seguimiento de Salud">App de Seguimiento de Salud</h3>
-                                <p data-en="Fitness and health monitoring app with wearable device integration" data-es="App de monitoreo de fitness y salud con integración de dispositivos wearables">
-                                    App de monitoreo de fitness y salud con integración de dispositivos wearables
-                                </p>
-                                <div class="tech-tags">
-                                    <span class="tech-tag">Flutter</span>
-                                    <span class="tech-tag">Dart</span>
-                                    <span class="tech-tag">HealthKit</span>
-                                    <span class="tech-tag">Firebase</span>
+                                    <span class="tech-tag">Programming</span>
+                                    <span class="tech-tag">Database</span>
+                                    <span class="tech-tag">Management</span>
+                                    <span class="tech-tag">Sales</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
             </section>
 
             <!-- Contact Section -->
@@ -2707,5 +2630,6 @@
     </script>
 </body>
 </html>
+
 
 
