--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@
                     <li role="none"><a href="#home" role="menuitem" data-en="Home" data-es="Inicio">Inicio</a></li>
                     <li role="none"><a href="#about" role="menuitem" data-en="About" data-es="Acerca">Acerca</a></li>
                     <li role="none"><a href="#services" role="menuitem" data-en="Services" data-es="Servicios">Servicios</a></li>
-                    <li role="none"><a href="#portfolio" role="menuitem" data-en="Portfolio" data-es="Portafolio">Portafolio</a></li>
+                    <li role="none"><a href="#portfolio" role="menuitem" data-en="Gallery" data-es="Galería">Galería</a></li>
                     <li role="none"><a href="#contact" role="menuitem" data-en="Contact" data-es="Contacto">Contacto</a></li>
                     <li role="none">
                         <button class="language-switch" onclick="toggleLanguage()" id="lang-btn" aria-label="Switch language">
@@ -1726,7 +1726,7 @@
                         <div class="service-catalog-item interactive-bg" data-aos="fade-up" data-aos-delay="200">
                             <h3 class="service-title">
                                 <span class="service-bullet">●</span>
-                                <span data-en="Complete Slack/Teams System" data-es="Sistema completo tipo Slack/Teams">Sistema completo tipo Slack/Teams</span>
+                                <span data-en="Enterprise Communication System" data-es="Sistema de Comunicación Empresarial">Sistema de Comunicación Empresarial</span>
                             </h3>
                             <p class="service-description" data-en="Internal communication for companies: chat, channels, users, files." data-es="Comunicación interna para empresas: chat, canales, usuarios, archivos.">
                                 Comunicación interna para empresas: chat, canales, usuarios, archivos.
@@ -2651,6 +2651,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
