--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
                         <div class="cta-buttons">
                             <a href="#portfolio" class="btn btn-primary" aria-label="View my portfolio">
                                 <i class="fas fa-eye" aria-hidden="true"></i>
-                                <span data-en="View Portfolio" data-es="Ver Portafolio">Ver Portafolio</span>
+                                <span data-en="View Gallery" data-es="Ver Galería">Ver Portafolio</span>
                             </a>
                             <button class="btn btn-secondary" onclick="downloadCV()" aria-label="Download my CV">
                                 <i class="fas fa-download" aria-hidden="true"></i>
@@ -2651,6 +2651,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
