--- a/index.html
+++ b/index.html
@@ -1603,8 +1603,8 @@
             <section class="hero" id="home" role="banner">
                 <div class="hero-container">
                     <div class="hero-content" data-aos="fade-right">
-                        <h1 class="typewriter" data-en="Freelance Developer" data-es="Desarrollador Freelance">Desarrollador Freelance</h1>
-                        <p class="subtitle" data-en="Full Stack Developer" data-es="Desarrollador Full Stack">Desarrollador Full Stack</p>
+                        <h1 class="typewriter" data-en="Full Stack Developer" data-es="Desarrollador Full Stack">Desarrollador Full Stack</h1>
+                        <p class="subtitle" data-en="Digital Solutions Creator" data-es="Creador de Soluciones Digitales">Creador de Soluciones Digitales</p>
                         <p data-en="Creating innovative digital solutions with modern technologies. Specialized in web development, mobile apps, and user experience design." data-es="Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.">
                             Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.
                         </p>
@@ -2651,6 +2651,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
