--- a/index.html
+++ b/index.html
@@ -982,20 +982,25 @@
 
         /* Contact Section */
         .contact {
-            background: var(--primary-color);
-            color: var(--text-light);
-            position: relative;
-        }
+    background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 50%, #FFB366 100%);
+    color: var(--text-light);
+    position: relative;
+    overflow: hidden;
+}
 
-        .contact::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(45deg, transparent 30%, rgba(247,108,94,0.1) 50%, transparent 70%);
-        }
+       .contact::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: 
+        radial-gradient(circle at 20% 50%, rgba(255,255,255,0.1) 0%, transparent 50%),
+        radial-gradient(circle at 80% 20%, rgba(255,255,255,0.08) 0%, transparent 50%),
+        radial-gradient(circle at 40% 80%, rgba(255,255,255,0.06) 0%, transparent 50%);
+    opacity: 0.7;
+}
 
         .contact-content {
             display: grid;
@@ -1027,15 +1032,15 @@
         }
 
         .contact-item i {
-            font-size: 1.5rem;
-            color: var(--accent-color);
-            width: 30px;
-            transition: transform 0.3s ease;
-        }
+    font-size: 1.8rem;
+    color: var(--text-light);
+    text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+}
 
         .contact-item:hover i {
-            transform: scale(1.2);
-        }
+    transform: scale(1.3) rotate(5deg);
+    color: #FFF8DC;
+}
 
         .contact-form {
             background: rgba(255,255,255,0.1);
@@ -2651,6 +2656,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
