--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             --text-dark: #2c3e50;
             --text-light: #ffffff;
             --text-muted: #6c757d;
+            --orange-color: #FF6B35;
             --bg-light: #f8f9fa;
             --shadow: 0 10px 30px rgba(0,0,0,0.1);
             --shadow-hover: 0 15px 40px rgba(0,0,0,0.15);
@@ -575,7 +576,7 @@
 
         .section-title h2 {
             font-size: 2.5rem;
-            color: var(--primary-color);
+            color: var(--orange-color);
             margin-bottom: 1rem;
             position: relative;
         }
@@ -2651,3 +2652,4 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
