--- a/index.html
+++ b/index.html
@@ -1914,7 +1914,7 @@
             <section class="contact" id="contact">
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
-                        <h2 data-en="Get In Touch" data-es="Contacto">Contacto</h2>
+                        <h2 data-en="Contact" data-es="Contacto">Contacto</h2>
                         <p data-en="Ready to start your next project? Let's work together!" data-es="¿Listo para comenzar tu próximo proyecto? ¡Trabajemos juntos!">
                             ¿Listo para comenzar tu próximo proyecto? ¡Trabajemos juntos!
                         </p>
@@ -2652,4 +2652,5 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
