--- a/index.html
+++ b/index.html
@@ -2029,7 +2029,7 @@
                         <p><a href="#home" data-en="Home" data-es="Inicio">Inicio</a></p>
                         <p><a href="#about" data-en="About" data-es="Acerca">Acerca</a></p>
                         <p><a href="#services" data-en="Services" data-es="Servicios">Servicios</a></p>
-                        <p><a href="#portfolio" data-en="Portfolio" data-es="Portafolio">Portafolio</a></p>
+                        <p><a href="#portfolio" data-en="Gallery" data-es="Galería">Galería</a></p>
                     </div>
                    
                     <div class="footer-section">
@@ -2652,5 +2652,6 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
