--- a/index.html
+++ b/index.html
@@ -422,10 +422,15 @@
         }
 
         .typewriter {
-            border-right: 3px solid var(--accent-color);
-            animation: blink 1s infinite;
-            display: block;
-        }
+    border-right: 3px solid var(--accent-color);
+    animation: blink 1s infinite;
+    display: inline-block; 
+}
+
+.typewriter span {
+    display: block;
+}
+
 
         .hero-content .subtitle {
             font-size: 1.3rem;
@@ -2654,6 +2659,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
