--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,8 @@
             <section class="hero" id="home" role="banner">
                 <div class="hero-container">
                     <div class="hero-content" data-aos="fade-right">
-                        <h1 class="typewriter" data-en="Full Stack Developer" data-es="Desarrollador Full Stack"> <span>Desarrollador</span>
+                        <h1 class="typewriter" data-en="Desarrollador Full Stack"> <span>Desarrollador</span>
+  <span>Full Stack" data-es="Desarrollador Full Stack"> <span>Desarrollador</span>
   <span>Full Stack</span></h1>
                         <p class="subtitle" data-en="Digital Solutions Creator" data-es="Creador de Soluciones Digitales">Creador de Soluciones Digitales</p>
                         <p data-en="Creating innovative digital solutions with modern technologies. Specialized in web development, mobile apps, and user experience design." data-es="Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.">
@@ -2659,6 +2660,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
