--- a/index.html
+++ b/index.html
@@ -424,12 +424,7 @@
         .typewriter {
     border-right: 3px solid var(--accent-color);
     animation: blink 1s infinite;
-    display: inline-block; 
-}
-
-.typewriter span {
-    display: block;
-}
+        }
 
 
         .hero-content .subtitle {
@@ -1610,9 +1605,7 @@
             <section class="hero" id="home" role="banner">
                 <div class="hero-container">
                     <div class="hero-content" data-aos="fade-right">
-                        <h1 class="typewriter" data-en="Desarrollador Full Stack"> <span>Desarrollador</span>
-  <span>Full Stack" data-es="Desarrollador Full Stack"> <span>Desarrollador</span>
-  <span>Full Stack</span></h1>
+                        <h1 class="typewriter" data-en="Full Stack Developer" data-es="Desarrollador Full Stack">Desarrollador Full Stack</h1>
                         <p class="subtitle" data-en="Digital Solutions Creator" data-es="Creador de Soluciones Digitales">Creador de Soluciones Digitales</p>
                         <p data-en="Creating innovative digital solutions with modern technologies. Specialized in web development, mobile apps, and user experience design." data-es="Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.">
                             Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.
