--- a/index.html
+++ b/index.html
@@ -1689,8 +1689,8 @@
                                 </div>
                                 <div class="skill-card interactive-bg" data-aos="fade-up" data-aos-delay="400">
                                     <i class="fas fa-palette" aria-hidden="true"></i>
-                                    <h4>UI/UX Design</h4>
-                                    <p>Figma, Adobe XD, Photoshop</p>
+                                    <h4>UI/DevOps</h4>
+                                    <p>Jest, Docker, ESLint, Scrum</p>
                                 </div>
                             </div>
                         </div>
@@ -2653,6 +2653,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
