--- a/index.html
+++ b/index.html
@@ -1690,7 +1690,7 @@
                                 <div class="skill-card interactive-bg" data-aos="fade-up" data-aos-delay="400">
                                     <i class="fas fa-palette" aria-hidden="true"></i>
                                     <h4>UI/DevOps</h4>
-                                    <p>Jest, Docker, ESLint, Scrum</p>
+                                    <p>Docker, Kubernetes, Jenkins, Terraform</p>
                                 </div>
                             </div>
                         </div>
@@ -2653,6 +2653,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
