--- a/index.html
+++ b/index.html
@@ -1689,7 +1689,7 @@
                                 </div>
                                 <div class="skill-card interactive-bg" data-aos="fade-up" data-aos-delay="400">
                                     <i class="fas fa-palette" aria-hidden="true"></i>
-                                    <h4>UI/DevOps</h4>
+                                    <h4>DevOps</h4>
                                     <p>Docker, Kubernetes, Jenkins, Terraform</p>
                                 </div>
                             </div>
@@ -2653,6 +2653,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
