--- a/index.html
+++ b/index.html
@@ -2038,7 +2038,7 @@
                         <p data-en="Web Development" data-es="Desarrollo Web">Desarrollo Web</p>
                         <p data-en="Mobile Apps" data-es="Apps Móviles">Apps Móviles</p>
                         <p>UI/UX Design</p>
-                        <p data-en="E-commerce" data-es="E-commerce">E-commerce</p>
+                        <p data-en="DevOps Services" data-es="Servicios DevOps">Servicios DevOps</p>
                     </div>
                    
                     <div class="footer-section">
@@ -2653,6 +2653,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
