--- a/index.html
+++ b/index.html
@@ -1573,7 +1573,11 @@
         <div class="performance-indicator" id="performance-indicator">
             <div id="fps-counter">FPS: 60</div>
             <div id="load-time">Load: 0ms</div>
+             display: none;
         </div>
+
+ }
+
 
         <!-- Navigation -->
         <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
@@ -2653,6 +2657,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
