--- a/index.html
+++ b/index.html
@@ -1559,6 +1559,11 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+#performance-indicator {
+    display: none;
+}
+
     </style>
 </head>
 <body>
@@ -1573,7 +1578,6 @@
         <div class="performance-indicator" id="performance-indicator">
             <div id="fps-counter">FPS: 60</div>
             <div id="load-time">Load: 0ms</div>
-             display: none;
         </div>
 
  }
@@ -2657,6 +2661,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
