--- a/index.html
+++ b/index.html
@@ -425,6 +425,10 @@
     border-right: 3px solid var(--accent-color);
     animation: blink 1s infinite;
         }
+       
+.typewriter br {
+    line-height: 1.2;
+}
 
 
         .hero-content .subtitle {
@@ -1613,7 +1617,7 @@
             <section class="hero" id="home" role="banner">
                 <div class="hero-container">
                     <div class="hero-content" data-aos="fade-right">
-                       <h1 class="typewriter" data-en="Full Stack Developer" data-es="Desarrollador Full Stack">Desarrollador Full Stack </h1>
+                       <h1 class="typewriter" data-en="Full Stack<br>Developer" data-es="Desarrollador<br>Full Stack">Desarrollador<br>Full Stack</h1>
 
 
                         <p class="subtitle" data-en="Digital Solutions Creator" data-es="Creador de Soluciones Digitales">Creador de Soluciones Digitales</p>
@@ -2469,7 +2473,7 @@ function toggleLanguage() {
             if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
                 element.placeholder = text;
             } else {
-                element.textContent = text;
+                element.innerHTML = text;
             }
         }
     });
@@ -2663,6 +2667,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
