--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
             <section class="hero" id="home" role="banner">
                 <div class="hero-container">
                     <div class="hero-content" data-aos="fade-right">
-                       <h1 class="typewriter" data-en="Full Stack<br>Developer" data-es="Desarrollador<br>Full Stack">Desarrollador<br>Full Stack</h1>
+                      <h1 class="typewriter" data-en="Full Stack<br>Developer" data-es="Desarrollador<br>Full Stack">Desarrollador<br />Full Stack</h1>
 
 
                         <p class="subtitle" data-en="Digital Solutions Creator" data-es="Creador de Soluciones Digitales">Creador de Soluciones Digitales</p>
@@ -2667,6 +2667,7 @@ if (typeof webVitals !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
